--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -5,7 +5,7 @@ pages:
 - [quickstart.md, Quick Start]
 - [about.md, About]
 site_url: http://shlomiassaf.github.io/resty-stone
-site_dir: ../gh-pages
+site_dir: ../../gh-pages
 repo_url: https://github.com/shlomiassaf/resty-stone/
 site_description: Rest API toolkit for KeystoneJS framework
 site_author: Shlomi Assaf
