--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-    "name": "resty-stone",
-    "version": "0.0.1",
-    "description": "Rest API for keystone.",
-    "main": "index.js",
-    "dependencies": {
-        "methods":  "~1.1.0",
-        "underscore": "~1.6.0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/danielpquinn/keystone-rest.git"
-    },
-    "keywords": [
-        "keystone",
-        "keystonejs"
-    ],
-    "author": {
-        "name": "Shlomi Assaf"
-    },
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/danielpquinn/keystone-rest/issues"
-    },
-    "homepage": "http://danielpquinn.github.io/keystone-rest/index.html",
-    "licenses": [
-        {
-            "type": "MIT"
-        }
-    ],
-    "readmeFilename": "README.md"
+  "name": "resty-stone",
+  "version": "0.0.2",
+  "keystoneVersion": "0.2.35",
+  "description": "Rest API for keystone.",
+  "main": "index.js",
+  "dependencies": {
+    "basic-auth": "^1.0.0",
+    "json-web-token": "^1.3.2",
+    "methods": "~1.1.0",
+    "underscore": "~1.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/danielpquinn/keystone-rest.git"
+  },
+  "keywords": [
+    "keystone",
+    "keystonejs"
+  ],
+  "author": {
+    "name": "Shlomi Assaf"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/danielpquinn/keystone-rest/issues"
+  },
+  "homepage": "http://danielpquinn.github.io/keystone-rest/index.html",
+  "licenses": [
+    {
+      "type": "MIT"
+    }
+  ],
+  "readmeFilename": "README.md"
 }
