--- a/.npmignore
+++ b/.npmignore
@@ -22,4 +22,10 @@ build/Release
 # Dependency directory
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
+.git
 node_modules
+docs
+example
+
+
+npm-debug.log
